ghost-blog/templates/ghost-service.yaml

apiVersion: v1
kind: Service
metadata:
  name: ghost
  namespace: ghost-blog
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb" # NLB for AWS
    service.beta.kubernetes.io/aws-load-balancer-scheme: "internet-facing"
    service.beta.kubernetes.io/aws-load-balancer-eip-allocations: "eipalloc-026a7f9a27496e526"
spec:
  type: LoadBalancer # Ensure LoadBalancer type is set
  selector:
    app: ghost
  ports:
    - protocol: TCP
      port: 80
      targetPort: 2368 # Ghost runs on 2368 inside the container
